--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 <div class="wrapper">
                     <div class="inner">
                         <div class="tit">
-                            <p>코딩하는게 즐거운</p>
-                            <h2>양은직<span>입니다<em>.</em></span></h2>
+                            <div class="txth1"><p>코딩하는게 즐거운</p></div>
+                            <div class="txth2"><h2>양은직<span>입니다<em>.</em></span></h2></div>
                         </div>
                         <div class="subtit">
-                            <p>디자인이라는 캔버스 위에 코드를 그리는것이 즐거운,<br>
-                            긍정적이고 적당히 업된 기분의 웹 퍼블리셔를 목표로 하고있습니다.</p>
+                            <div class="txtbox"><p>디자인이라는 캔버스 위에 코드를 그리는것이 즐거운</p></div>
+                            <div class="txtbox"><p>긍정적이고 적당히 업된 기분의 웹 퍼블리셔를 목표로 하고있습니다.</p></div>
                         </div>
                         <div class="sub">
                             <ul>
@@ -64,12 +64,12 @@
             <section class="about">
                 <div class="inner">
                     <div class="wrapper">
-                        <h2>양은직<br>Yang Eun-Jick</h2>
+                        <h2 class="txt">양은직<br>Yang Eun-Jick</h2>
                     </div>
                     <div class="top">
                         <div class="wrapper">
                             <ul>
-                                <li>
+                                <li class="info">
                                     <p>1997.02.27.</p>
                                     <p>+82 10-6321-1796</p>
                                     <p>Snowdoge97@gmail.com</p>
@@ -85,12 +85,12 @@
                     <div class="bot">
                         <div class="wrapper">
                             <ul>
-                                <li>
+                                <li class="edu">
                                     <h2>EDUCATION</h2>
                                     <span><strong>2016.</strong><p>청주외국어고등학교 졸업</p></span>
                                     <span><strong>2016~<br>2020.</strong><p>우송정보대학교<br>컴퓨터 정보과</p></span>
                                 </li>
-                                <li>
+                                <li class="exp">
                                     <h2>EXPERIENCE</h2>
                                     <span class="item"><strong>2017.</strong><p>Blizzard Entertainment 외부 기술지원</p></span>
                                     <span class="item"><strong>2018~<br>2019.</strong><p>StyleBook<br>취업연계과정 S/W 개발</p></span>
@@ -107,7 +107,7 @@
                         <h2>PROJECTs</h2>
                         <p>이 친구는 <strong>이런 것</strong>들을 만들었어요</p>
                     </div>
-                    <a href="https://www.hmnurse.co.kr/" target="_blank" class="content">
+                    <a href="https://www.hmnurse.co.kr/" target="_blank" class="content1">
                         <ul class="depth1">
                             <li>
                                 <ul class="depth2">
@@ -121,7 +121,7 @@
                             </li>
                         </ul>
                     </a>
-                    <a href="jphealth/index.html" target="_blank" class="content">
+                    <a href="jphealth/index.html" target="_blank" class="content2">
                         <ul class="depth1">
                             <li class="img2">
                                 <p>증평군보건소 사이트 이미지</p>
@@ -135,7 +135,7 @@
                             </li>
                         </ul>
                     </a>
-                    <a href="nhfire/index.html" target="_blank" class="content last">
+                    <a href="nhfire/index.html" target="_blank" class="content3">
                         <ul class="depth1">
                             <li>
                                 <ul class="depth2">
