--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h2>PROJECTs</h2>
                         <p>이 친구는 <strong>이런 것</strong>들을 만들었어요</p>
                     </div>
-                    <a href="https://www.hmnurse.co.kr/" target="_blank" class="content1">
+                    <a href="http://www.hmnurse.co.kr/" target="_blank" class="content1">
                         <ul class="depth1">
                             <li>
                                 <ul class="depth2">
