--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="scroll">
+                    <div class="scroll2"></div>
+                </div>
             </section>
             <section class="about">
                 <div class="inner">
