--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="scroll">
-                    <div class="scroll2"></div>
+                <div class="scroll_inner">
+                    <p>Keep Scroll Down!</p>
+                    <div class="scroll">
+                        <div class="scroll2"></div>
+                    </div>
                 </div>
             </section>
             <section class="about">
