--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="scroll_inner">
-                    <p>Keep Scroll Down!</p>
+                    <p>Keep<br>Scroll Down!</p>
                     <div class="scroll">
                         <div class="scroll2"></div>
                     </div>
