--- a/index.html
+++ b/index.html
@@ -116,10 +116,18 @@
                     <a href="http://www.hmnurse.co.kr/" target="_blank" class="content1">
                         <ul class="depth1">
                             <li>
-                                <ul class="depth2">
-                                    <li class="top"><strong>Website<br>in Service</strong><span>2018</span></li>
-                                    <li class="bot"><strong>홍명</strong><p>간호학원</p></li>
-                                </ul>
+                                <div class="depth_inner">
+                                    <ul class="depth2">
+                                        <li class="top"><strong>Website<br>in Service</strong><span>2018</span></li>
+                                        <li class="bot"><strong>홍명</strong><p>간호학원</p></li>
+                                    </ul>
+                                    <ul class="depth3">
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>jQuery</li>
+                                        <li>JS</li>
+                                    </ul>
+                                </div>
                             </li>
                             <li class="img1">
                                 <p>홍명간호학원 사이트 이미지</p>
